gitops/apps/aws/staging/acme/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: acme
spec:
  parentRefs:
    - name: shared-gateway
      namespace: shared-gateway
      sectionName: https
  hostnames:
    - acme.raymondcollazo.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: n8n
          port: 5678
